change input type to tel

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <form class="contacts-form">
                             <input placeholder="Name" type="text" class="contacts-form-input">
                             <input placeholder="Email" type="email" class="contacts-form-input">
-                            <input placeholder="Phone" type="phone" class="contacts-form-input">
+                            <input placeholder="Phone" type="tel" class="contacts-form-input">
 
                             <button class="btn-black contacts-form-btn">Submit</button>
                         </form>
